Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8391

ASSERTION( list_empty(&lock->l_res_link) )

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.12.0
    • Lustre 2.8.0, Lustre 2.12.0
    • 3
    • 9223372036854775807

      lustre client crashed after eviction:

      <3>LustreError: 20358:0:(ldlm_lockd.c:1797:ldlm_handle_cp_callback()) change resource!
      <3>LustreError: 3259:0:(ldlm_lockd.c:1797:ldlm_handle_cp_callback()) change resource!
      <0>LustreError: 3259:0:(ldlm_lock.c:1096:ldlm_granted_list_add_lock()) ASSERTION( list_empty(&lock->l_res_link) ) failed:
      <0>LustreError: 3259:0:(ldlm_lock.c:1096:ldlm_granted_list_add_lock()) LBUG
      <4>Pid: 3259, comm: ldlm_cb03_002
      <4>
      <4>Call Trace:
      <4> [<ffffffffa04b9895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      <4> [<ffffffffa04b9e97>] lbug_with_loc+0x47/0xb0 [libcfs]
      <4> [<ffffffffa0898e87>] ldlm_grant_lock+0x9b7/0xa20 [ptlrpc]
      <4> [<ffffffffa08b106f>] ldlm_handle_cp_callback+0x1cf/0x1150 [ptlrpc]
      <4> [<ffffffffa08b3168>] ldlm_callback_handler+0x1178/0x1810 [ptlrpc]
      <4> [<ffffffffa06db9af>] ? keys_fill+0x6f/0x190 [obdclass]
      <4> [<ffffffffa08d177c>] ? lustre_msg_get_transno+0x8c/0x100 [ptlrpc]
      <4> [<ffffffffa08d7e2b>] ? ptlrpc_update_export_timer+0x4b/0x560 [ptlrpc]
      <4> [<ffffffffa08e02c5>] ptlrpc_server_handle_request+0x385/0xc00 [ptlrpc]
      <4> [<ffffffffa04cb4ea>] ? lc_watchdog_touch+0x7a/0x190 [libcfs]
      <4> [<ffffffffa08d7929>] ? ptlrpc_wait_event+0xa9/0x2d0 [ptlrpc]
      <4> [<ffffffff810546b9>] ? __wake_up_common+0x59/0x90
      <4> [<ffffffffa08e162d>] ptlrpc_main+0xaed/0x1780 [ptlrpc]
      <4> [<ffffffffa08e0b40>] ? ptlrpc_main+0x0/0x1780 [ptlrpc]
      <4> [<ffffffff8109abf6>] kthread+0x96/0xa0
      <4> [<ffffffff8100c20a>] child_rip+0xa/0x20
      <4> [<ffffffff8109ab60>] ? kthread+0x0/0xa0
      <4> [<ffffffff8100c200>] ? child_rip+0x0/0x20
      <4>
      <0>Kernel panic - not syncing: LBUG
      <4>Pid: 3259, comm: ldlm_cb03_002 Not tainted 2.6.32-431.29.2.el6.x86_64 #1
      <4>Call Trace:
      <4> [<ffffffff8152873c>] ? panic+0xa7/0x16f
      <4> [<ffffffffa04b9eeb>] ? lbug_with_loc+0x9b/0xb0 [libcfs]
      <4> [<ffffffffa0898e87>] ? ldlm_grant_lock+0x9b7/0xa20 [ptlrpc]
      <4> [<ffffffffa08b106f>] ? ldlm_handle_cp_callback+0x1cf/0x1150 [ptlrpc]
      <4> [<ffffffffa08b3168>] ? ldlm_callback_handler+0x1178/0x1810 [ptlrpc]
      <4> [<ffffffffa06db9af>] ? keys_fill+0x6f/0x190 [obdclass]
      <4> [<ffffffffa08d177c>] ? lustre_msg_get_transno+0x8c/0x100 [ptlrpc]
      <4> [<ffffffffa08d7e2b>] ? ptlrpc_update_export_timer+0x4b/0x560 [ptlrpc]
      <4> [<ffffffffa08e02c5>] ? ptlrpc_server_handle_request+0x385/0xc00 [ptlrpc]
      <4> [<ffffffffa04cb4ea>] ? lc_watchdog_touch+0x7a/0x190 [libcfs]
      <4> [<ffffffffa08d7929>] ? ptlrpc_wait_event+0xa9/0x2d0 [ptlrpc]
      <4> [<ffffffff810546b9>] ? __wake_up_common+0x59/0x90
      <4> [<ffffffffa08e162d>] ? ptlrpc_main+0xaed/0x1780 [ptlrpc]
      <4> [<ffffffffa08e0b40>] ? ptlrpc_main+0x0/0x1780 [ptlrpc]
      <4> [<ffffffff8109abf6>] ? kthread+0x96/0xa0
      <4> [<ffffffff8100c20a>] ? child_rip+0xa/0x20
      <4> [<ffffffff8109ab60>] ? kthread+0x0/0xa0
      <4> [<ffffffff8100c200>] ? child_rip+0x0/0x20

      The ldlm lock was granted twice, by 20358 and 3259

            dongyang Dongyang Li
            lidongyang Li Dongyang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: